--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -6,13 +6,13 @@ server:
 application:
   name: Gateway
   basepath: gateway
-
+  
 accounts:
-  base-url: http://localhost:8081/accounts/
+  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/
   create-account: account/create-account
   user-info: customer/user-info
 
 transactions:
-  base-url: http://localhost:8082/transactions/
+  base-url: https://app-transactions-665026f5a398.herokuapp.com/
   create-transaction: transaction/create-transaction
   transaction-history: transaction/history
