--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -8,11 +8,11 @@ application:
   basepath: gateway
   
 accounts:
-  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/
+  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/accounts
   create-account: account/create-account
   user-info: customer/user-info
 
 transactions:
-  base-url: https://app-transactions-665026f5a398.herokuapp.com/
+  base-url: https://app-transactions-665026f5a398.herokuapp.com/transactions
   create-transaction: transaction/create-transaction
   transaction-history: transaction/history
