--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
       with:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
-          HEROKU_APP_NAME_ACCOUNTS: ${{ secrets.HEROKU_APP_NAME_GATEWAY }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME_GATEWAY }}
    
