--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -10,7 +10,8 @@ application:
 accounts:
   base-url: https://app-accounts-0434b53c81ce.herokuapp.com/accounts/
   create-account: account/create-account
-  user-info: customer/user-info
+  user-info: customer/customer-info
+  user-accounts: account/customer-accounts
 
 transactions:
   base-url: https://app-transactions-665026f5a398.herokuapp.com/transactions/
