--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,7 @@ accounts:
   base-url: https://app-accounts-0434b53c81ce.herokuapp.com/
   create-account: account/create-account
   user-info: customer/user-info
+  user-accounts: account/user-accounts
 
 transactions:
   base-url: https://app-transactions-665026f5a398.herokuapp.com/
