--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,12 +8,12 @@ application:
   basepath: gateway
 
 accounts:
-  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/
+  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/accounts/
+  account: account
   create-account: account/create-account
-  user-info: customer/user-info
-  user-accounts: account/user-accounts
+  customer-info: customer/customer-info
 
 transactions:
-  base-url: https://app-transactions-665026f5a398.herokuapp.com/
+  base-url: https://app-transactions-665026f5a398.herokuapp.com/transactions/
   create-transaction: transaction/create-transaction
   transaction-history: transaction/history
