--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -9,12 +9,12 @@ application:
 
 
 accounts:
-  base-url: http://localhost:8081/accounts/
+  base-url: https://app-accounts-0434b53c81ce.herokuapp.com/accounts/
   account: account
   create-account: account/create-account
   customer-info: customer/customer-info
 
 transactions:
-  base-url: http://localhost:8082/transactions/
+  base-url: https://app-transactions-665026f5a398.herokuapp.com/transactions/
   create-transaction: transaction/create-transaction
   transaction-history: transaction/history
